Update PROFILEREADME (converted to html webpage).html

--- a/PROFILEREADME (converted to html webpage).html
+++ b/PROFILEREADME (converted to html webpage).html
@@ -1,12 +1,9 @@
 <!DOCTYPE html>
 <html>
 <blockquote>
-  img src=”https://avatars.githubusercontent.com/u/81769195?s=48&v=4”alt=”My profile picture”width=”96%”height=”96%”>
-  <br>
+  img src="https://avatars.githubusercontent.com/u/81769195?s=48&v=4"alt="My profile picture"width="96%"height="96%">
     img src=”https://avatars.githubusercontent.com/u/81769195?s=48&v=4”alt=”My profile picture”width=”96%”height=”96%”>
-  <br>
     img src=”https://avatars.githubusercontent.com/u/81769195?s=48&v=4”alt=”My profile picture”width=”96%”height=”96%”>
-  <br>
 </blockquote>
 <ul>
   <li>👋 Hi, I’m @JavascriptCoder999</li>
