Update PROFILEREADME (converted to html webpage).html

--- a/PROFILEREADME (converted to html webpage).html
+++ b/PROFILEREADME (converted to html webpage).html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+  <title>Git README</title>
 <blockquote>
   img src="https://upload.wikimedia.org/wikipedia/en/6/61/Travis_Scott_-_Birds_in_the_Trap_Sing_McKnight.png"alt="My profile picture"width="96%"height="96%">
   <br>
@@ -59,6 +60,6 @@
             background-image: url('https://i.ytimg.com/vi/FT9BSvVLi6s/hqdefault.jpg?sqp=-oaymwEcCPYBEIoBSFXyq4qpAw4IARUAAIhCGAFwAcABBg==&rs=AOn4CLDpsq8vsJSf-c4b1c21aQN2vM2KBg');
           }
         </style>
-        </head
+      </head>
     </html>
   
