Update PROFILEREADME (converted to html webpage).html

--- a/PROFILEREADME (converted to html webpage).html
+++ b/PROFILEREADME (converted to html webpage).html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html>
   <title>Git README</title>
@@ -22,7 +23,7 @@
     <br>
   <li>😁 Find me on --<a href="https://hub.docker.com/u/mousewheel7"><b>DockerHub - lost access to this account because I forgot my Docker ID</b><del>dang</del></a>
     <br>
-    <li>thank you for following me (<i><u>@LastSandwich, @mikeevenforgithub, @code598, @code44598, @code-e3, @caringtiger, @liobrasil, @mechoutayoub !</i>)
+    <li>thank you for following me (<i><u><a href="https://github.com/LastSandwich">@LastSandwich</a>, <a href="https://github.com/mikevenforgithub">@mikeevenforgithub</a>, <a href="https://github.com/Code598">@code598</a>, <a href="https://github.com/code44876">@code44598</a>, <a href="https://github.com/code-e3">@code-e3</a>, <a href="https://github.com/caringtiger">@caringtiger</a>, <a href="https://github.com/liobrasil">@liobrasil</a>, <a href="https://github.com/mechouatayoub">@mechoutayoub</a> !</u></i>)
       <br>
       discord:
       <br>
@@ -62,4 +63,3 @@
         </style>
       </head>
     </html>
-  
