--- a/PROFILEREADME (converted to html webpage).html
+++ b/PROFILEREADME (converted to html webpage).html
@@ -4,14 +4,22 @@
   <title>Git README</title>
   <p class="center">
 <blockquote>
-  img src="https://upload.wikimedia.org/wikipedia/en/6/61/Travis_Scott_-_Birds_in_the_Trap_Sing_McKnight.png"alt="My profile picture"width="96%"height="96%">
+<img src="https://upload.wikimedia.org/wikipedia/en/6/61/Travis_Scott_-_Birds_in_the_Trap_Sing_McKnight.png"alt="Birds In The Trap Sing McKnight"width="12.5%"height="12.5%">
+<strong><b><h1 style="background-color:dodgerblue;">My Profile picture For Git</h1></b></strong>
+<p>
+<meta charset="UTF-8">
+</p>
   <br>
-    img src="https://upload.wikimedia.org/wikipedia/en/6/61/Travis_Scott_-_Birds_in_the_Trap_Sing_McKnight.png”alt="My profile picture"width="96%"height="96%">
+<img src="https://upload.wikimedia.org/wikipedia/en/6/61/Travis_Scott_-_Birds_in_the_Trap_Sing_McKnight.png"alt="Birds In The Trap Sing McKnight"width="12.5%"height="12.5%">
+<strong><b><h2 style="background-color:coral;">tiG roF erutcip eliforP yM</h2></b></strong>
   <br>
-    img src="https://upload.wikimedia.org/wikipedia/en/6/61/Travis_Scott_-_Birds_in_the_Trap_Sing_McKnight.png"alt="My profile picture"width="96%"height="96%">
+<img src="https://upload.wikimedia.org/wikipedia/en/6/61/Travis_Scott_-_Birds_in_the_Trap_Sing_McKnight.png"alt="Birds In The Trap Sing McKnight"width="12.5%"height="12.5%">
+<strong><b><h3 style="background-color:darkolivegreen">My profile picture For Git</h3></b></strong>
   <br>
+ <p>&#128512;</p>
 </blockquote>
   </p>
+<body>
 <ul>
   <li>👋 Hi, I’m @JavascriptCoder999</li>
   <br>
@@ -23,7 +31,7 @@
   <br>
   <li>😁 Find me on --<a href="https://bitbucket.org/draggable-dragon_28/"><b>Bitbucket</b></a>
     <br>
-  <li>😁 Find me on --<a href="https://hub.docker.com/u/mousewheel7"><b>DockerHub - lost access to this account because I forgot my Docker ID</b><del>dang</del></a>
+  <li>😁 Find me on --<a href="https://hub.docker.com/u/mousewheel7"><b>DockerHub - lost access to this account because I forgot my Docker ID</b><del> dang</del></a>
     <br>
     <li>thank you for following me (<i><u><a href="https://github.com/LastSandwich">@LastSandwich</a>, <a href="https://github.com/mikevenforgithub">@mikeevenforgithub</a>, <a href="https://github.com/Code598">@code598</a>, <a href="https://github.com/code44876">@code44598</a>, <a href="https://github.com/code-e3">@code-e3</a>, <a href="https://github.com/caringtiger">@caringtiger</a>, <a href="https://github.com/liobrasil">@liobrasil</a>, <a href="https://github.com/mechouatayoub">@mechoutayoub</a> !</u></i>)
       <br>
@@ -37,12 +45,13 @@
       <br>
       <del>why is this text in strikethrough?</del>
       <br>
-      -i also hate how markdown needs you to enter twice
+     <big> -i also hate how markdown needs you to enter twice</big>
       <br>
-+i don't like it
+<big>+i don't like it</big>
       <br>
-!i think that is only for discord
+<big>!i think that is only for discord</big>
 <br>
+</body>
       <blockquote>
         i am now on blue belt in my coding course (stage 5 out of 9)
         <br>
@@ -64,9 +73,17 @@
           }
         </style>
       </head>
-      <h1>
+      <h4>
         <!---
   @FuturamaGuy2017
 --->
-      </h1>
+      </h4>
+<h5>
+<strong>BONUS!: Poop</strong>
+<img src="https://yt3.ggpht.com/FYadWgfoWd6sCVUqg5KciTdLeJin-vxIO8T6lMReeuAYjnnQUeGMVv494rEfmE4JJbtw0-jb=s88-c-k-c0x00ffffff-no-rj"alt="Poopy Man 2"width="25%"height="25%">
+<img src="https://i.ytimg.com/vi/jcJ-N6v0-xA/hqdefault.jpg?sqp=-oaymwEbCKgBEF5IVfKriqkDDggBFQAAiEIYAXABwAEG&rs=AOn4CLAqtl7g5w-w7fkhQ3FrEEqgSuepAg"alt="Poopy Man"width="25%"height="25%">
+<img src="https://i.ytimg.com/vi/rSjxxqTU2lw/hqdefault.jpg?sqp=-oaymwEbCKgBEF5IVfKriqkDDggBFQAAiEIYAXABwAEG&rs=AOn4CLBWi1m5M7cgC9YmZygOLUZB8fDsFg"alt="Poop Time"width="25%"height="25%">
+<img src="https://i.ytimg.com/vi/-dZM-PvRWCQ/hqdefault.jpg?sqp=-oaymwEbCKgBEF5IVfKriqkDDggBFQAAiEIYAXABwAEG&rs=AOn4CLCMvmt7fDgKhWPO6QL9kvcNjV_9bw"alt="Pooper Scooper"width="25%"height="25%">
+<img src="https://i.ytimg.com/vi/x_lpQkv5nY0/hqdefault.jpg?sqp=-oaymwEbCKgBEF5IVfKriqkDDggBFQAAiEIYAXABwAEG&rs=AOn4CLBB3XnoYND1R8t1XGLhFBbUYy9PcA"alt="Poopity Scoop"width="25%"height="25%">
+</h5>
     </html>
